<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/second_theme_color"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent">


    <com.hjq.bar.TitleBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        app:titleColor="@color/white"
        app:title="@string/string_preview"
        app:lineVisible="false"
        app:leftIcon="@drawable/ic_white_left_back"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/secondGifSpeedImageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">



        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">



            <TextView
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_slowest"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_11"
                android:layout_marginStart="@dimen/dp_15"/>

            <TextView
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_fast"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_11"
                android:layout_marginEnd="15dp"/>


            <TextView
                android:id="@+id/secondGifSpeedTv"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_25"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>


        </androidx.constraintlayout.widget.ConstraintLayout>


        <SeekBar
            android:id="@+id/secondSpeedSeekBar"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_25"
            android:progressDrawable="@drawable/second_seekbar_progress"
            android:thumb="@drawable/second_seekbar_thumb"/>


        <TextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:text="@string/string_speed_adjust"
            android:textColor="@color/white"/>


        <com.hjq.shape.view.ShapeTextView
            android:id="@+id/secondGifConfirmTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_20"
            android:layout_gravity="center"
            android:paddingStart="@dimen/dp_30"
            android:paddingEnd="@dimen/dp_30"
            android:paddingBottom="@dimen/dp_5"
            android:paddingTop="@dimen/dp_5"
            app:shape_solidColor="#FD6A4A"
            android:layout_marginTop="@dimen/dp_30"
            app:shape_radius="@dimen/dp_20"
            android:text="@string/common_confirm"/>


    </LinearLayout>

</LinearLayout>